[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-pgkit"
version = "0.1.0"
description = "Lightweight PostgreSQL toolkit: asyncpg + SQLAlchemy + structured DB logging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Simon (simonsjw)", email = "simon@example.com"},
]
keywords = ["postgresql", "asyncpg", "sqlalchemy", "logging", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_pgkit"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
